crates/graphcal-eval/tests/snapshots/error_snapshots__error_unknown_graph_ref.snap
---
source: crates/graphcal-eval/tests/error_snapshots.rs
expression: rendered
---
unknown graph reference `@z`
    Diagnostic severity: error
Begin snippet for unknown_ref.gcl starting at line 2, column 1

snippet line 2: param x: Dimensionless = 1.0;
snippet line 3: node y: Dimensionless = @z + 1.0;
    label at line 3, columns 25 to 26: not found
diagnostic help: graph references must point to a `param` or `node`
diagnostic code: graphcal::N002
