crates/graphcal-eval/tests/snapshots/error_snapshots__error_unknown_index.snap
---
source: crates/graphcal-eval/tests/error_snapshots.rs
expression: rendered
---
unknown index `NoSuchIndex`
    Diagnostic severity: error
Begin snippet for unknown_index.gcl starting at line 1, column 1

snippet line 1: param x: Velocity[NoSuchIndex] = 1.0 m/s;
    label at line 1, columns 19 to 29: unknown index
diagnostic help: declare a named or coordinate index, or write `Fin(N)` explicitly for a structural axis; coordinate constructors are `range(start, end, step: delta)` and `linspace(start, end, points: N)`
diagnostic code: graphcal::I001
