crates/graphcal-eval/tests/snapshots/error_snapshots__error_unknown_variant.snap
---
source: crates/graphcal-eval/tests/error_snapshots.rs
expression: rendered
---
unknown variant `NoSuch` in index `Phase`
    Diagnostic severity: error
Begin snippet for unknown_variant.gcl starting at line 5, column 1

snippet line 5: };
snippet line 6: param bad: Dimensionless = @x[Phase#NoSuch];
    label at line 6, columns 37 to 42: not a variant of `Phase`
diagnostic code: graphcal::I002
