crates/graphcal-eval/tests/snapshots/error_snapshots__error_wrong_arity.snap
---
source: crates/graphcal-eval/tests/error_snapshots.rs
expression: rendered
---
function `sqrt` expects 1 argument(s), got 2
    Diagnostic severity: error
Begin snippet for wrong_arity.gcl starting at line 2, column 1

snippet line 2: param x: Dimensionless = 1.0;
snippet line 3: node y: Dimensionless = sqrt(@x, 2.0);
    label at line 3, columns 25 to 28: wrong number of arguments
diagnostic code: graphcal::N006
